--- a/css/detyra4/detyra4.html
+++ b/css/detyra4/detyra4.html
@@ -25,16 +25,77 @@
             <h3 id="h4"><span id="span2">Bed & Bath     </span>What is your home like?</h3>
             <div id="div3">
                 <label >Home type</label>
-                <br><br>
+                <br>
                 <select name="" id="select1">
                     <option value="house">House</option>
                     <option value="flat">Flat</option>
                     <option value="mansion">Mansion</option>
                 </select>
+                <br> 
+                <label for="">Bedrooms</label>
+                <br>
+                <select name="" id="select2">
+                    <option value="house">1 Bedroom</option>
+                    <option value="flat">2 Bedrooms</option>
+                    <option value="mansion">3 Bedrooms</option>
+                </select>
+                <br>   
+                <label for="" id="lab6">King
+                <br>
+                <select name="" id="select3">
+                    <option value="house">0 </option>
+                    <option value="house">1 </option>
+                    <option value="flat">2</option>
+                </select>
+                </label>
+                <label for="" id="lab7">Queen
+                <br>
+                <select name="" id="select4">
+                    <option value="house">0 </option>
+                    <option value="house">1 </option>
+                    <option value="flat">2</option>
+                </select>
+            </label>
             </div>
             <div id="div4">
-
+                <label >Room type</label>
+                <br>
+                <select name="" id="select5">
+                    <option value="house">Entire home/apt</option>
+                    <option value="flat">Half home/apt</option>
+                    <option value="mansion">Quarter home/apt</option>
+                </select>
+                <br>
+                <label for="">Bathrooms</label>
+                <br>
+                <select name="" id="select6">
+                    <option value="house">1 Bathroom</option>
+                    <option value="flat">2 Bathrooms</option>
+                    <option value="mansion">3 Bathrooms</option>
+                </select>
+                <br>   
+                <label for="" id="lab8">Full
+                <br>
+                <select name="" id="select7">
+                    <option value="house">0 </option>
+                    <option value="house">1 </option>
+                    <option value="flat">2</option>
+                </select>
+                </label>
+                <label for="" id="lab9">Twin
+                <br>
+                <select name="" id="select8">
+                    <option value="house">0 </option>
+                    <option value="house">1 </option>
+                    <option value="flat">2</option>
+                </select>
+            </label>
+                <br> 
+                
             </div>
+            <div id="div5">
+                    <button id="but1">Sign me up!</button>
+                </div>
         </div>
     </div>
 </body>
