--- a/css/dita11/navbar.html
+++ b/css/dita11/navbar.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="navbar.css">
 </head>
 <body>
-    <nav>
-        <ul>
+    <nav >
+        <ul id="navbar">
         <li><a href="#">Home</a></li>
-        <li><a href="#">about</a></li>
-        <li><a href="#">contact</a></li>
-        <li><a href="#">blog</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Blog</a></li>
     </ul>
     </nav>
 </body>
